tests/ecc-aws-037-security_group_ingress_is_restricted_traffic_to_postgresql_port_5432/placebo-green/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "GroupId": "sg-035cd585e683c777c",
                "IpPermissionsEgress": [],
                "Tags": [
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Green"
                    },
                    {
                        "Key": "Name",
                        "Value": "037_security_group_green"
                    },
                    {
                        "Key": "CustodianRule",
                        "Value": "ecc-aws-037-security_group_ingress_is_restricted_traffic_to_postgresql_port_5432"
                    }
                ],
                "VpcId": "vpc-00000",
                "OwnerId": "644160558196",
                "GroupName": "037_security_group_green",
                "Description": "Managed by Terraform",
                "IpPermissions": [
                    {
                        "IpProtocol": "-1",
                        "UserIdGroupPairs": [],
                        "IpRanges": [
                            {
                                "CidrIp": "10.10.10.0/32"
                            },
                            {
                                "CidrIp": "10.0.0.0/32"
                            }
                        ],
                        "Ipv6Ranges": [
                            {
                                "CidrIpv6": "fe80::/10"
                            }
                        ],
                        "PrefixListIds": []
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": 1000,
                        "ToPort": 1050,
                        "UserIdGroupPairs": [],
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": []
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 1000,
                        "ToPort": 1000,
                        "UserIdGroupPairs": [],
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": []
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": 20,
                        "ToPort": 20,
                        "UserIdGroupPairs": [],
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": []
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": 5432,
                        "ToPort": 5432,
                        "UserIdGroupPairs": [],
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": []
                    }
                ]
            }
        ],
        "ResponseMetadata": {}
    }
}
